--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -7,16 +7,20 @@
 	}
 }
 
-%c_fff { color: #fff; }
+
 %c_000 { color: #000 }
 %c_0a80cb { color: #0a80cb; }
-%c_2d9ae0 { color: #2d9ae0; }
-%c_70a3c4 { color: #70a3c4; }
 %c_2e3c54 { color: #2e3c54; }
-%c_28093a9 { color: #8093a9; }
-%c_71a72c { color: #71a72c; }
+%c_2d9ae0 { color: #2d9ae0; }
+%c_2e3c54 { color: #2e3c54; }
+%c_53aae2 { color: #53aae2; }
 %c_697f9a { color: #697f9a; }
+%c_70a3c4 { color: #70a3c4; }
+%c_71a72c { color: #71a72c; }
+%c_8093a9 { color: #8093a9; }
+%c_96a5b8 { color: #96a5b8; }
 %c_ccd3d7 { color: #ccd3d7; }
+%c_fff { color: #fff; }
 
 %font_10 { font-size: 10px; }
 %font_11 { font-size: 11px; }
@@ -32,6 +36,7 @@
 %font_23 { font-size: 23px; }
 %font_24 { font-size: 24px; }
 %font_30 { font-size: 30px; }
+%font_48 { font-size: 48px; }
 
 %bold { font-weight: bold; }
 %italic { font-style: italic; }
@@ -87,3 +92,5 @@
 %w_100 { width: 100%; }
 
 /*font family*/
+%pt_sans_narrow_bold { font-family: 'ptsans-narrow-bold', sans-serif; }
+%pt_sans_narrow_regular { font-family: 'ptsans-narrow-regular', sans-serif; }
