--- a/themes/perevozkin/sass/_footer.scss
+++ b/themes/perevozkin/sass/_footer.scss
@@ -2,108 +2,45 @@
 
 
 .footer {
-	height: 472px;
-	margin: -476px 0 0 0;
-	border-top: 4px solid #d70000;
-	background: url("/img/footer-bg.jpg") no-repeat left center #3b3b3b;
-	position: relative;
-	z-index: 2;
-
-	div,
-	p,
-	a,
-	span{
-		@extend %c_fff;
-	}
-	
 	& > div {
-		padding: 27px 0 0 0;
+		padding-top: 60px;
 	}
 	
-	.contacts {
-		width: 300px;
+	.questions {
+		margin: 5px 0 0 99px;
 		
-		@extend %fl;
-	}
-	
-	.ur-data {
-		width: 285px;
-		margin: 0 25px 0 0;
+		@extend %pt_sans_narrow_bold;
+		@extend %font_18;
+		@extend %c_2e3c54;		
 		
-		@extend %fl;
+		.title {
 			
-		.txt {
-			margin: 0 0 29px 0;
-			&:last-of-type {
-				margin-bottom: 0;
-			}
-		}
-	}
-	.our-shop {
-		@extend %fr;
-	}
-	
-	.view-map {
-		img {
-			width: 375px;
+			
+			@extend %db;
+			@extend %pt_sans_narrow_regular;
+			@extend %font_18;
+			@extend %c_2e3c54;
 		}
 	}
 	
-	.adress,
-	.phones,
-	.email {
-		padding: 0 0 0 45px;
-		margin: 0 0 28px 0;
+	.created-by {
+		font-size: 14px;
+		@extend %c_697f9a;
 		
-		@extend %for_sprite;
-	}
-	
-	.email {
-		height: 19px;
-		line-height: 19px;
-		
-		&:before {
-			left: 0;
-			top: 0;
+		a:visited,
+		a:hover,
+		a {
+			color: inherit;
 			
-			@extend .ico-email;
 		}
 	}
-	
-	.phones {
-		
-		&:before {
-			left: 0;
-			top: 2px;
-			
-			@extend .ico-phone;
-		}
-	}
-	
-	.adress {
-		&:before {
-			left: 0;
-			top: 2px;
-			
-			@extend .ico-adress;
-		}		
-	}
-	
-	.site-name {
-		padding: 0 17px 0 0;
-	}
-	
-	.copyright {
-		margin: 20px 0 0 0;
-	}
+
 }
 
-.footer-hdr {
-	margin: 0 0 30px 0;
+.footer-cell {
+	margin-right: 20px;
 	
-	@extend %bold;
-	@extend %uppercase;
-	@extend %font_17;
+	@extend %fl;
 }
 
-/* end Футер */
+
