--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -40,8 +40,9 @@ $ico-sprite-dimensions: true;
 
 @import "_placeholders";
 @import "_common";	//общие стили 
-@import "_typo";
 @import "_stages-block";
+@import "_statistic-block";
+@import "_benefits-block";
 @import "_header";
 @import "_footer";
 
