--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -35,7 +35,9 @@
 %font_20 { font-size: 20px; }
 %font_23 { font-size: 23px; }
 %font_24 { font-size: 24px; }
+%font_28 { font-size: 28px; }
 %font_30 { font-size: 30px; }
+%font_36 { font-size: 36px; }
 %font_48 { font-size: 48px; }
 
 %bold { font-weight: bold; }
